[package]
description = "Vapcore stratum lib"
name = "vapcore-stratum"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
documentation = "https://docs.rs/vapcore-stratum"
homepage = "https://github.com/openvapory/tetsy-vapory"
repository = "https://github.com/openvapory/tetsy-vapory"

[dependencies]
vapory-types = "0.8.0"
tetsy-keccak-hash = "0.4.0"
tetsy-jsonrpc-core = "14.2.1"
tetsy-jsonrpc-tcp-server = "14.2.1"
log = "0.4"
parking_lot = "0.9"

[dev-dependencies]
env_logger = "0.5"
tokio = "0.1"
tokio-io = "0.1"
