[package]
description = "Tetsy VVM Implementation"
name = "vvmbin"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[[bin]]
name = "tetsy-vvm"
path = "./src/main.rs"

[dependencies]
account-state = { path = "../vapcore/account-state" }
common-types = { path = "../vapcore/types", features = ["test-helpers"] }
docopt = "1.0"
env_logger = "0.5"
vapcore = { path = "../vapcore", features = ["test-helpers", "json-tests"] }
vapory-types = "0.8.0"
vapjson = { path = "../json", features = ["test-helpers"] }
vvm = { path = "../vapcore/vvm" }
panic-hook = { path = "../util/panic-hook" }
tetsy-bytes = "0.1"
pod = { path = "../vapcore/pod" }
rustc-hex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spec = { path = "../vapcore/spec" }
trace = { path = "../vapcore/trace" }
vm = { path = "../vapcore/vm" }

[dev-dependencies]
criterion = "0.3"
tempdir = "0.3"

[features]
vvm-debug = ["vapcore/vvm-debug-tests"]

[[bench]]
name = "mod"
harness = false
