[package]
description = "Tetsy Vapory Logger Implementation"
name = "vapcore-logger"
version = "1.12.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
edition = "2018"
documentation = "https://docs.rs/vapcore-logger"
homepage = "https://github.com/openvapory/tetsy-vapory"
repository = "https://github.com/openvapory/tetsy-vapory"

[dependencies]
log = "0.4"
env_logger = "0.5"
atty = "0.2"
lazy_static = "1.0"
regex = "1.0"
time = "0.1"
parking_lot = "0.9"
arrayvec = "0.4"
ansi_term = "0.11"
