[package]
name = "dir"
version = "0.1.2"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0"
description = "Dir utilities for platform-specific operations"
documentation = "https://docs.rs/dir"
homepage = "https://github.com/openvapory/tetsy-vapory"
repository = "https://github.com/openvapory/tetsy-vapory"

[dependencies]
vapory-types = "0.8.0"
journaldb = { version = "0.2.0", path = "../journaldb" }
app_dirs = "1.2.1"
# app_dirs = { git = "https://github.com/openvapory/app-dirs-rs" }
home = "0.3"
