[package]
description = "Mock fetcher for testing"
name = "fake-fetch"
version = "0.0.1"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
documentation = "https://docs.rs/fake-fetch"
homepage = "https://github.com/openvapory/tetsy-vapory"
repository = "https://github.com/openvapory/tetsy-vapory"

[dependencies]
futures = "0.1"
hyper = "0.12"

[target.'cfg(windows)'.dependencies]
fetch = { path = "../fetch" }

[target.'cfg(unix)'.dependencies]
fetch = { path = "../fetch" }

[target.'cfg(target_arch = "x86")'.dependencies]
fetch = { path = "../fetch" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
fetch = { path = "../fetch" }
