[package]
name = "fastmap"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Tetcoin Developers <support@tetcoin.org>"]
description = "Specialized version of `HashMap` with H256 keys and fast hashing function."
license = "GPL-3.0"
documentation = "https://docs.rs/fastmap"
homepage = "https://github.com/openvapory/tetsy-vapory"
repository = "https://github.com/openvapory/tetsy-vapory"

[dependencies]
vapory-types = "0.8.0"
tetsy-plain-hasher = "0.2.1"
