[package]
description = "Atomically cached len(), for use with collections contained in parking_lot Mutex and RwLock"
license = "GPL-3.0"
name = "len-caching-lock"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io>"]
documentation = "https://docs.rs/len-caching-lock"
homepage = "https://github.com/openvapory/tetsy-vapory"
repository = "https://github.com/openvapory/tetsy-vapory"

[dependencies]
parking_lot = "0.9"
